test/Runner/errors/tests/Test.seedconf3.js
mi("Suite", () => {
	seed('Seed', () => {

	}, {
		timeout: 'foo'
	});
});